Roadmap unificado: esquinas B6 (-Xlint, diferencial de emisión), Fase F (JIT) y Fase I/J (depurador JPDA, jlink/jimage)